<resources>
    <string name="app_name">Priority Reminder</string>
    <string name="app_name_splash">Priority\nReminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sync">Sync</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>

    <!--progress messages-->
    <string name="progress_validating_setup">Validating setup...</string>
    <string name="progress_loading_projects">Loading projects...</string>
    <string name="progress_adding_project">Adding project...</string>
    <string name="progress_updating_task">Updating task...</string>
    <string name="progress_updating">Updating ...</string>
    <string name="progress_getting_ready">Getting ready ...</string>
    <string name="progress_syncing">Syncing projects....</string>


    <string name="dialog_lbl_fatal_error_recoverable">Failed to initialize. Please check your internet connection and retry or continue in offine mode</string>
    <string name="dialog_title_fatal_error_recoverable">Error</string>

    <string name="dialog_lbl_logout_confirmation">Do you really want to logout?</string>
    <string name="dialog_title_logout">Logout</string>


    <string name="add_project_title">Add Project</string>
    <string name="edit_project_title">Edit Project</string>
    <string name="add_task_title">Add Task</string>
    <string name="lbl_project_title">Add Title</string>
    <string name="btn_add_project"> + Add Project</string>
    <string name="btn_add">+ Add</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <string name="btn_retry">Retry</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_exit">Exit</string>

    <string name="lbl_status">Project with status</string>
    <string name="hint_add_project">Add project title</string>

    <string name="lbl_theme">Select Project Theme</string>
    <dimen name="drag_threshold">5dp</dimen>

    <string name="lbl_title_quadrant1">Quadrant 1</string>
    <string name="lbl_title_quadrant2">Quadrant 2</string>
    <string name="lbl_title_quadrant3">Quadrant 3</string>
    <string name="lbl_title_quadrant4">Quadrant 4</string>

    <string name="lbl_title_state_quadrant1">Upcoming</string>
    <string name="lbl_title_state_quadrant2">Due</string>
    <string name="lbl_title_state_quadrant3">In progress</string>
    <string name="lbl_title_state_quadrant4">Completed</string>

    <string name="hint_q1">Add quadrant 1 title</string>
    <string name="hint_q2">Add quadrant 2 title</string>
    <string name="hint_q3">Add quadrant 3 title</string>
    <string name="hint_q4">Add quadrant 4 title</string>
    <string name="demo_text">Font Color</string>

    <!--edit task-->
    <string name="hint_task_title">Add task title</string>
    <string name="hint_task_desc">Add task description</string>
    <string name="lbl_task_quadrant">Quadrant</string>
    <string name="lbl_task_status">Status</string>
    <string name="lbl_task_desc">Description</string>
    <string name="lbl_task_type">Type</string>
    <string name="lbl_task_starts_on">Starts on</string>
    <string name="lbl_task_due_on">Due on</string>
    <string name="lbl_task_repeat_type">Repeat type</string>
    <string name="lbl_not_set">Not Set</string>

    <!--intent constant-->
    <string name="intent_notification_id">notification_id</string>
    <string name="intent_taskitem_message">taskitem_message</string>
    <string name="intent_action_notification">intent_actionn_notification</string>
    <!--action-->
    <string name="action_notify">Task pending need your attention</string>

    <!--color picker-->
    <string name="no_color">No Color </string>
    <string name="label_color_auto">Auto</string>
    <string name="label_color_custom">Custom</string>

    <string-array name="icon_name_array">
        <item>empty_orange128.png</item>
        <item>blue_airplane128.png</item>
        <item>blue_bicyclist128.png</item>
        <item>blue_book128.png</item>
        <item>blue_coffee128.png</item>
        <item>blue_diamond128.png</item>
        <item>blue_dining128.png</item>
        <item>blue_document128.png</item>
        <item>blue_gift128.png</item>
        <item>blue_hospital128.png</item>
        <item>blue_printer128.png</item>
        <item>blue_scale128.png</item>
        <item>blue_telephone128.png</item>
        <item>green_cellphone128.png</item>
        <item>green_circle128.png</item>
        <item>green_envelope128.png</item>
        <item>green_exclamation128.png</item>
        <item>green_filecabinet128.png</item>
        <item>green_house128.png</item>
        <item>green_laptop128.png</item>
        <item>green_pen128.png</item>
        <item>green_questionmark128.png</item>
        <item>green_smiley128.png</item>
        <item>green_text128.png</item>
        <item>green_world128.png</item>
        <item>blue_businessdoc2128.png</item>
        <item>orange_star128.png</item>
        <item>orange_baby128.png</item>
        <item>orange_bubble128.png</item>
        <item>orange_camera128.png</item>
        <item>orange_diamond128.png</item>
        <item>orange_family128.png</item>
        <item>orange_headphones128.png</item>
        <item>orange_pill128.png</item>
        <item>red_clock128.png</item>
        <item>red_fire128.png</item>
        <item>red_graph128.png</item>
        <item>red_idea128.png</item>
        <item>red_ipod128.png</item>
        <item>red_musicnote128.png</item>
        <item>red_piano128.png</item>
        <item>red_shoppingcart128.png</item>
        <item>red_tools128.png</item>
        <item>red_dollar128.png</item>
        <item>blue_euro128.png</item>
        <item>blue_pound128.png</item>
        <item>blue_businessbox128.png</item>
        <item>blue_businessdoc128.png</item>
        <item>blue_cabinet128.png</item>
        <item>blue_car128.png</item>
        <item>blue_clock128.png</item>
        <item>blue_cocktail128.png</item>
        <item>blue_creditcard128.png</item>
        <item>blue_envelope128.png</item>
        <item>blue_fruit128.png</item>
        <item>blue_heart128.png</item>
        <item>blue_home128.png</item>
        <item>blue_key128.png</item>
        <item>blue_lightbulb128.png</item>
        <item>blue_paperclip128.png</item>
        <item>blue_pencil128.png</item>
        <item>blue_santaclaus128.png</item>
        <item>blue_ship128.png</item>
        <item>blue_shovel128.png</item>
        <item>blue_stop128.png</item>
        <item>blue_thumbsdown128.png</item>
        <item>blue_thumbsup128.png</item>
        <item>blue_world128.png</item>
        <item>blue_wrench128.png</item>
        <item>orange_00128.png</item>
        <item>orange_01128.png</item>
        <item>orange_02128.png</item>
        <item>orange_03128.png</item>
        <item>orange_04128.png</item>
        <item>orange_05128.png</item>
        <item>orange_06128.png</item>
        <item>orange_07128.png</item>
        <item>orange_08128.png</item>
        <item>orange_09128.png</item>
        <item>orange_10128.png</item>
        <item>orange_brain128.png</item>
        <item>orange_briefcase128.png</item>
        <item>orange_fire128.png</item>
        <item>orange_girl128.png</item>
        <item>orange_information128.png</item>
        <item>orange_island128.png</item>
        <item>orange_male128.png</item>
        <item>orange_percentage128.png</item>
        <item>orange_prescription128.png</item>
        <item>orange_star128.png</item>
        <item>orange_stroller128.png</item>
        <item>orange_studying128.png</item>
        <item>orange_tree128.png</item>
        <item>red_0128.png</item>
        <item>red_10128.png</item>
        <item>red_1128.png</item>
        <item>red_2128.png</item>
        <item>red_3128.png</item>
        <item>red_4128.png</item>
        <item>red_5128.png</item>
        <item>red_6128.png</item>
        <item>red_7128.png</item>
        <item>red_8128.png</item>
        <item>red_9128.png</item>
        <item>red_asterisk128.png</item>
        <item>red_exclamation128.png</item>
        <item>red_greater128.png</item>
        <item>red_smaller128.png</item>
        <item>red_x128.png</item>
        <item>blackcircletransparent128.png</item>
        <item>plainredcircle128.png</item>
        <item>plainyellowcircle128.png</item>
        <item>plaingreencircle128.png</item>
        <item>plainwhitecircle128.png</item>
        <item>plaingraycircle128.png</item>
        <item>plainpurplecircle128.png</item>
        <item>plainmagentacircle128.png</item>
        <item>plainbluecircle128.png</item>
    </string-array>
</resources>
